--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     display: flex;
     justify-content: center;
   }
-  
-.typewriter div {
+
+.header div {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
