--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
   }
 
-.typer div {
+.typewriter div {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
