--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #333;
+    background-color: aquamarine;
     padding-top: 5em;
     display: flex;
     justify-content: center;
