--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-body {
-    background-color: aquamarine;
-    padding-top: 5em;
-    display: flex;
-    justify-content: center;
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
+body{
+    padding: 40px;
+    background-color: #121212;  
   }
 
-.typewriter div {
+.typewriter {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
