--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
+body {
+    background: #333;
+    padding-top: 5em;
+    display: flex;
+    justify-content: center;
+  }
+
+
 .typewriter h1 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
