--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   }
 
 
-.typewriter h1 {
+.typewriter {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
